<package format="3">
  <name>rmf_plugins_common</name>
  <version>1.0.0</version>
  <description>
    Common utility functions for Gazebo and ignition RMF plugins
  </description>
  <author>Morgan Quigley</author>
  <author>Michael Grey</author>
  <author>Roselle Carmen</author>
  <author>Aaron Chong</author>
  <author>Brandon Ong</author>
  <author>Rushyendra Maganty</author>
  <maintainer email="morgan@openrobotics.org">Morgan Quigley</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>

  <depend>std_msgs</depend>

  <depend>rmf_fleet_msgs</depend>
  <depend>rmf_dispenser_msgs</depend>
  <depend>building_map_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
