<package format="3">
  <name>rmf_plugins_common</name>
  <version>1.2.0</version>
  <description>
    Common utility functions for Gazebo and ignition RMF plugins
  </description>
  <author>Aaron Chong</author>
  <author>Rushyendra Maganty</author>
  <maintainer email="luca@openrobotics.org">Luca Della Vedova</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>eigen</depend>

  <depend>std_msgs</depend>
  <depend>rmf_fleet_msgs</depend>
  <depend>rmf_dispenser_msgs</depend>
  <depend>rmf_ingestor_msgs</depend>
  <depend>building_map_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
